[gd_scene load_steps=6 format=3 uid="uid://dufb3o6i21t47"]

[ext_resource type="Theme" uid="uid://fg7vl58y3nn0" path="res://99_resources/main_theme.tres" id="1_uh2pk"]
[ext_resource type="Script" uid="uid://uf2n51uws82" path="res://01_user-interface/elements/volume-slider/volume_slider.gd" id="1_wsv10"]
[ext_resource type="Script" uid="uid://bhi5vi1yni2i5" path="res://01_user-interface/settings-menu/settings_menu.gd" id="2_5nxtp"]
[ext_resource type="Script" uid="uid://wtkip6i1f07w" path="res://01_user-interface/elements/on-hover-anim-component/on_hover_animation_component.gd" id="3_yr0k2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5nxtp"]
bg_color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uh2pk")
script = ExtResource("2_5nxtp")

[node name="CoveragePanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -657.0
offset_top = -388.0
offset_right = 681.0
offset_bottom = 393.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5nxtp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -118.0
offset_right = 148.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
theme_type_variation = &"LabelHeader"
text = "Settings"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/MainContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="VolumeContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2

[node name="VolumeTitleLabel" type="Label" parent="PanelContainer/MarginContainer/MainContainer/VolumeContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="MasterHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainContainer/VolumeContainer"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="PanelContainer/MarginContainer/MainContainer/VolumeContainer/MasterHBox"]
layout_mode = 2
size_flags_horizontal = 10
text = "Master	"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolSldr" type="HSlider" parent="PanelContainer/MarginContainer/MainContainer/VolumeContainer/MasterHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.5
script = ExtResource("1_wsv10")
busName = "Master"

[node name="MusicHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainContainer/VolumeContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="PanelContainer/MarginContainer/MainContainer/VolumeContainer/MusicHBox"]
layout_mode = 2
size_flags_horizontal = 10
text = "Music"

[node name="MusicVolSldr" type="HSlider" parent="PanelContainer/MarginContainer/MainContainer/VolumeContainer/MusicHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.5
script = ExtResource("1_wsv10")
busName = "music"

[node name="SFXHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainContainer/VolumeContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="PanelContainer/MarginContainer/MainContainer/VolumeContainer/SFXHBox"]
layout_mode = 2
size_flags_horizontal = 10
text = "SFX		"

[node name="SFXVolSldr" type="HSlider" parent="PanelContainer/MarginContainer/MainContainer/VolumeContainer/SFXHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.5
script = ExtResource("1_wsv10")
busName = "sfx"

[node name="Spacer2" type="Control" parent="PanelContainer/MarginContainer/MainContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
text = "Main Menu"

[node name="OnHoverAnimComponent" type="Node" parent="PanelContainer/MarginContainer/MainContainer/MainMenuButton"]
script = ExtResource("3_yr0k2")
hoverScale = Vector2(1.05, 1.05)
metadata/_custom_type_script = "uid://wtkip6i1f07w"

[node name="Spacer3" type="Control" parent="PanelContainer/MarginContainer/MainContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
text = "Quit Game"

[node name="OnHoverAnimComponent" type="Node" parent="PanelContainer/MarginContainer/MainContainer/QuitButton"]
script = ExtResource("3_yr0k2")
hoverScale = Vector2(1.05, 1.05)
metadata/_custom_type_script = "uid://wtkip6i1f07w"

[node name="Spacer4" type="Control" parent="PanelContainer/MarginContainer/MainContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
text = "Close"

[node name="OnHoverAnimComponent" type="Node" parent="PanelContainer/MarginContainer/MainContainer/CloseButton"]
script = ExtResource("3_yr0k2")
hoverScale = Vector2(1.05, 1.05)
metadata/_custom_type_script = "uid://wtkip6i1f07w"
